--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 	<div class="copyrightSection">
 
 		<div class="col-md-12 text-center">
-			<p>&copy; Copyright 2019</p>
+			<p>&copy; Copyright 2019. Customized by Sudipta Sinha.</p>
 		</div>
 
 	</div>
